# django-ecommerce-engine

./: .gitignore  docker-compose.yml  example.env
backend/: example.env  pyproject.toml
backend/apps/catalog/: models.py
backend/apps/catalog/migrations/: 0001_initial.py  0002_initial.py
backend/apps/checkout/: models.py
backend/apps/checkout/migrations/: 0001_initial.py
backend/apps/core/: models.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/coupons/: models.py
backend/apps/coupons/migrations/: 0001_initial.py
backend/apps/identity/: apps.py  models.py
backend/apps/identity/migrations/: 0001_initial.py
backend/apps/inventory/: models.py
backend/apps/inventory/migrations/: 0001_initial.py
backend/apps/rms/: apps.py  models.py
backend/apps/rms/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
